# Mobile-wheeled-robot-master-ackermann-model

./: .gitignore  SCENES_README.md  control_test.sh  install_robot_model.sh  launch_world.sh  path.txt  run_experiments.py  start_path_follower.sh  test_path_follower.py
src/simple_robot/: CMakeLists.txt  package.xml
src/simple_robot/config/: controllers.yaml
src/simple_robot/launch/: demo.launch.py  path_tracking.launch.py  robot.launch.py
src/simple_robot/scripts/: move_obstacles.py  open_loop_follow.py  path_follower.py  task_executor.py
src/simple_robot/urdf/: robot.gazebo.xacro  robot.urdf.xacro
src/simple_robot/worlds/: airport.world  big_maze.world  construction_site.world  dense_forest.world  dynamic_obstacles.world  factory.world  farm.world  garden_maze.world  hospital.world  huge_obstacle.world  library.world  moving_platforms.world  multi_level.world  my_map.world  narrow_corridors.world  obstacle_course.world  office.world  parking_lot.world  race_track.world  random_obstacles.world  restaurant.world  shopping_mall.world  static_obstacles.world  test.world  test_visible.world  testing_ground.world  urban_street.world  warehouse.world
